kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: express-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: express

  template:
    metadata:
      labels:
        app: express

    spec:
      containers:
      - name: express-container
        image: 323206974001.dkr.ecr.ap-south-1.amazonaws.com/k8s-express-demo:v5

        ports:
        - containerPort: 3000
