kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      imagePullSecrets:
      - name: ecr-secret

      containers:
      - name: frontend-container
        image: 323206974001.dkr.ecr.ap-south-1.amazonaws.com/frontend-image:v2

        ports:
        - containerPort: 80
