kubernetes/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: express-service

spec:
  selector:
    app: express

  ports:
  - port: 80
    targetPort: 3000

  type: ClusterIP
