kubernetes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress

spec:
  ingressClassName: traefik

  tls:
  - hosts:
    - devops.sunilsinghrajput.in
    secretName: devops-tls

  rules:
  - host: devops.sunilsinghrajput.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
